<resources>
    <string name="app_name">To Do List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_pass">Type your Password</string>
    <string name="retype_your_pass">Retype your Password</string>
    <string name="already_registered">Already Registered!!</string>
    <string name="not_registered">Not Registered Yet ??</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
</resources>